Address PR review feedback
Spatial filtering improvements:
- Use st_filter() with st_disjoint for Irish Sea exclusion (both MPA and
  infrastructure) - cleaner than st_intersects + negation
- Move st_intersects() explanation to Spatial Intersection Analysis section
  where it's actually used
- Fix table description: "Sparse index list" not "Logical matrix"

Code style updates:
- Replace formula syntax (~.x) with lambda syntax (\(x)) throughout
- Use startsWith() instead of grep() for cables filtering
- Replace lapply/sapply with map/map_int for consistency
- Move null check to top of standardise_sf function

Display fixes:
- Remove rownames from mpa_combined table display
- Add code-link: true to YAML header
- Change study area figure from echo: false to code-fold: true

Documentation:
- Add rnaturalearth and skimr to install.packages() call
- Add note explaining cddalocations vs cddaareas
- Use inline R code for mar_perc statistics

Package updates:
- Replace here with quarto package for project root detection
- Update emodnet.wcs install to use r-universe
- Add Rplots.pdf to .gitignore

--- a/index.qmd
+++ b/index.qmd
@@ -132,9 +132,8 @@ install.packages(c(
     "tmap"
 ))
 
-# Install emodnet.wcs from GitHub (not yet on CRAN)
-# install.packages("pak")
-pak::pak("EMODnet/emodnet.wcs")
+# Install emodnet.wcs' latest version (not yet on CRAN)
+install.packages('emodnet.wcs', repos = c('https://emodnet.r-universe.dev', 'https://cloud.r-project.org'))
 ```
 
 ### Quick Start
