--- a/tutorials/tutorial-01.qmd
+++ b/tutorials/tutorial-01.qmd
@@ -64,7 +64,7 @@ Note: EMODnet also provides telecommunication cable datasets (e.g., `sigcables`,
 
 ### Packages
 
-We'll use `emodnet.wfs` to access EMODnet WFS services, `sf` for spatial data handling, `dplyr` and `purrr` for data manipulation, and `ggplot2` and `tmap` for visualisation.
+We'll use [`emodnet.wfs`](https://emodnet.github.io/emodnet.wcs/) to access EMODnet WFS services, [`sf`](https://r-spatial.github.io/sf/) for spatial data handling, [`rnaturalearth`](http://docs.ropensci.org/rnaturalearth/) to get European coastlines, [`dplyr`](https://dplyr.tidyverse.org/) and [`purrr`](https://purrr.tidyverse.org/) for data manipulation, and [`ggplot2`](https://ggplot2.tidyverse.org/) and [`tmap`](https://r-tmap.github.io/tmap/) for visualisation.
 
 ```{r}
 #| label: load-packages
